--- a/wallywoodfrontend/src/pages/home/home.module.css
+++ b/wallywoodfrontend/src/pages/home/home.module.css
@@ -1,8 +1,6 @@
-@use "../../styles/globals" as globals;
-
 .homePageImage {
   height: 40vh;
   width: 100%;
   object-fit: cover;
   border-radius: 8px;
-}
+}/*# sourceMappingURL=home.module.css.map */
