--- a/wallywoodfrontend/src/components/Poster/Poster.module.scss
+++ b/wallywoodfrontend/src/components/Poster/Poster.module.scss
@@ -25,4 +25,13 @@
   p {
     font-size: 0.9rem;
   }
+
+  .mainDescription {
+    display: -webkit-box;
+    -webkit-line-clamp: 6;
+    line-clamp: 6;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    word-break: break-word;
+  }
 }
