--- a/wallywoodfrontend/src/index.css
+++ b/wallywoodfrontend/src/index.css
@@ -1,11 +1,21 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap");
 
+
 #root,
 body {
   scroll-behavior: smooth;
   box-sizing: border-box;
-  background-color: #5c1f06;
   font-family: "Open Sans", sans-serif;
+}
+
+body.light, #root.light {
+  background-color: #f9f9f9;
+  color: #222;
+}
+
+body.dark, #root.dark {
+  background-color: #222;
+  color: #fff;
 }
 
 h1,
