feat: implement dark and light mode styles; enhance Navbar and Mainlayout for theme support; add ScrollBar component; update routing and Poster component for details view

--- a/wallywoodfrontend/src/layouts/Main.layout.module.scss
+++ b/wallywoodfrontend/src/layouts/Main.layout.module.scss
@@ -10,3 +10,13 @@
   margin: auto;
   padding: 0 10vh 0 10vh;
 }
+
+.dark {
+  background: #222;
+  color: #fff;
+}
+
+.light {
+  background: #fff;
+  color: #222;
+}
