--- a/wallywoodfrontend/src/App.css
+++ b/wallywoodfrontend/src/App.css
@@ -40,3 +40,13 @@
 .read-the-docs {
   color: #888;
 }
+
+.light {
+  background: #fff;
+  color: #222;
+}
+
+.dark {
+  background: #222;
+  color: #fff;
+}
