--- a/wallywoodfrontend/src/components/Footer/Footer.module.scss
+++ b/wallywoodfrontend/src/components/Footer/Footer.module.scss
@@ -11,6 +11,11 @@
     display: flex;
     flex-direction: row;
     gap: 32px;
+    div {
+      h3 {
+        font-size: 1rem;
+      }
+    }
   }
 
   section:nth-child(2) {
@@ -21,11 +26,6 @@
     display: flex;
     flex-direction: column;
     gap: 8px;
-  }
-
-  h3 {
-    font-size: 0.5rem;
-    font-weight: 200;
   }
 
   p {
